<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/old_paper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/app_title"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/settings_subtitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/font_size_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/font_size"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <SeekBar
            android:id="@+id/font_size_seekbar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progress="1" />

        <LinearLayout
            android:id="@+id/font_size_seekbar_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:text="@string/small_font_size"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/medium_font_size"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/large_font_size"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.25"
                android:gravity="end"
                android:text="@string/very_large_font_size"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/theme_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TableRow>

                <RadioGroup
                    android:id="@+id/theme_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/default_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/old_paper"
                        android:text="@string/default_color" />
                    <RadioButton
                        android:id="@+id/black_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/black"
                        android:text="@string/black"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/white_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/white"
                        android:text="@string/white" />

                    <RadioButton
                        android:id="@+id/pink_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/pink"
                        android:text="@string/pink" />

                    <RadioButton
                        android:id="@+id/purple_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/purple_500"
                        android:text="@string/purple"
                        android:textColor="@color/white"/>

                </RadioGroup>
            </TableRow>

            <TableRow>


                <RadioGroup
                    android:id="@+id/theme_radiogroup_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/orange_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/orange"
                        android:text="@string/orange" />

                    <RadioButton
                        android:id="@+id/green_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/lawn_green"
                        android:text="@string/lawnGreen"
                        android:textColor="@color/blue"/>

                    <RadioButton
                        android:id="@+id/cyan_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/cyan"
                        android:text="@string/cyan"
                        android:textColor="@color/purple_700"/>

                    <RadioButton
                        android:id="@+id/blue_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/blue"
                        android:text="@string/blue"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/yellow_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@color/yellow"
                        android:text="@string/yellow" />

                </RadioGroup>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/apply_button" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/back_button" />
    </LinearLayout>
</ScrollView>