<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/old_paper">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/app_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/add_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/add_subtitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/meeting_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/meeting_title"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/meeting_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="text" />
        <TextView
            android:id="@+id/meeting_place_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/meeting_place"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/meeting_place_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="text" />
        <TextView
            android:id="@+id/meeting_participants_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/meeting_participants"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/meeting_participants_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="text"
            android:hint="@string/add_participant_hint" />
        <ImageView
            android:id="@+id/participant_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <Button
            android:id="@+id/choose_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_image"
            android:backgroundTint="@color/forest_green"/>
        <Button
            android:id="@+id/add_participant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_participant"
            android:backgroundTint="@color/forest_green"/>
        <HorizontalScrollView
            android:id="@+id/meeting_participants_list_hscroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/meeting_participants_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" />
        </HorizontalScrollView>
        <TextView
            android:id="@+id/meeting_datetime_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/meeting_datetime"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        <LinearLayout
            android:id="@+id/meeting_datetime_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/meeting_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.2"
                android:text="@string/meeting_date"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/meeting_date_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.9"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/meeting_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.2"
                android:text="@string/meeting_time"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/meeting_time_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.9"
                android:textColor="@color/black"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/meeting_datetime_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:backgroundTint="@color/forest_green"
                android:text="@string/date_picker_button" />
            <Button
                android:id="@+id/time_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="25dp"
                android:text="@string/time_picker_button"
                android:backgroundTint="@color/forest_green"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/meeting_image_url_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/meeting_image_url"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/meeting_image_url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="text" />
        <Button
            android:id="@+id/get_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_image"
            android:backgroundTint="@color/forest_green"/>
        <ImageView
            android:id="@+id/meeting_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <Button
            android:id="@+id/add_meeting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/add_meeting"
            android:backgroundTint="@color/dark_green"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/tomato" />
        <TextView
            android:id="@+id/manage_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/manage_subtitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/manage_summary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="@string/manage_summary_button"
            android:backgroundTint="@color/dark_green"/>
        <Button
            android:id="@+id/manage_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="@string/manage_search_button"
            android:backgroundTint="@color/dark_green"/>
        <Button
            android:id="@+id/manage_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="@string/manage_update_button"
            android:backgroundTint="@color/dark_green"/>
        <Button
            android:id="@+id/manage_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="@string/manage_settings_button"
            android:backgroundTint="@color/dark_green"/>
        <Button
            android:id="@+id/manage_about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="@string/manage_about_button"
            android:backgroundTint="@color/dark_green"/>

    </LinearLayout>
</ScrollView>